# cpp-samples

./: .gitignore
Baruch_C++/Kapil_Sharma_Level_2_HW_Resubmission/Ex_1_7_4/: Ex_1_7_4.c  Ex_1_7_4.vcxproj.filters
Baruch_C++/Level_1/: Level_1.sln
Baruch_C++/Level_2/: Level_2.sln
Baruch_C++/Level_3/: Level_3.sln
Baruch_C++/Level_4/: Level_4.sln
Baruch_C++/Level_5/: Level_5.sln
Baruch_C++/Level_6/: Level_6.sln
Baruch_C++/Level_7/: Level_7.sln
Baruch_C++/Level_7/Ex_7_1/: Ex_7_1.vcxproj  Source.cpp
Baruch_C++/Level_7/Ex_7_2/: Ex_7_2.vcxproj  Source.cpp
Baruch_C++/Level_7/Ex_7_3/: CheckSmaller.cpp  CheckSmaller.hpp  Ex_7_3.vcxproj  Ex_7_3.vcxproj.filters  Source.cpp
Baruch_C++/Level_8/: Level_8.sln
Baruch_C++/Level_8/Ex_8_1/: Ex_8_1.vcxproj  Ex_8_1.vcxproj.filters  Point.hpp  Source.cpp  Stack.cpp
Baruch_C++/Level_8/Ex_8_2/: Ex_8_2.vcxproj  Ex_8_2.vcxproj.filters  Tuple.cpp
Baruch_C++/Level_8/Ex_8_3/: Ex_8_3.vcxproj  Ex_8_3.vcxproj.filters  NumericArray.cpp  Source.cpp  StackFullException.cpp  Visitor.cpp  Visitor.hpp
Baruch_C++/Level_8/Ex_8_4/: Ex_8_4.vcxproj  Ex_8_4.vcxproj.filters  RandomNumberGeneration.cpp
Baruch_C++/Level_8/Ex_8_5/: Ex_8_5.vcxproj  Source.cpp
Baruch_C++/Level_9/: Level_9.sln
Baruch_C++/Level_9/Ex_9_Group_A/: Pricing.cpp  (+12 more)
Singleton/: Singleton.sln
Singleton/Singleton/: Singleton.vcxproj  Source.cpp
cmake_tutorial/chapter1-2/: main.cc
cmake_tutorial/tutorial1/: main.cc
read_hdf5/: CMakeLists.txt  Sample.h5  main.cpp
ticks-player/: mainwindow.cpp  mainwindow.h  mainwindow.ui  ticks-player.pro  ticks_player.py
(+356 files in other folders)
